--- a/Laba2/Laba2.vcxproj
+++ b/Laba2/Laba2.vcxproj
@@ -139,9 +139,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Dcatik\Laba1\Laba1\IReader.h" />
-    <ClInclude Include="..\..\Dcatik\Laba1\Laba1\IWriter.h" />
+    <ClInclude Include="IReader.h" />
+    <ClInclude Include="IStringOperation.h" />
+    <ClInclude Include="IWriter.h" />
     <ClInclude Include="String.h" />
+    <ClInclude Include="TxtReader.h" />
+    <ClInclude Include="TxtWriter.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="String.cpp" />
+    <ClCompile Include="TxtReader.cpp" />
+    <ClCompile Include="TxtWriter.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
